2005-07-29  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki.cgi, hikiconf.rb.sample, hiki/config.rb, hiki/xmlrpc.rb,
	misc/hikifarm/hiki.conf, misc/i18n/hikiconf.rb.sample.en,
	plugin/00default.rb, plugin/en/00default.rb, plugin/fr/00default.rb,
	plugin/it/00default.rb, plugin/ja/00default.rb, template/hiki.conf: add web interface
	to enable/disable XML-RPC interfaces.

2005-07-28  Kouhei Yanagita <sugi@dream.big.or.jp>
	* hiki.cgi, hiki/xmlrpc.rb: XMLRPC interface is now available via hiki.cgi.
	xmlrpc.cgi becomes needless.

	* misc/xmlrpc/xmlrpc.cgi, misc/xmlrpc/README: removed.

2005-07-26  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hikifarm/vc-backend-setup.cgi: HikifarmRepos*#import/imported?
	should take a basenamed wiki name. (by Atsushi Koga)

	* style/default/html_formatter.rb (make_link): use a page name
	instead of a page title in a toc (suggested by Shinya Kawaji). 

2005-07-21  Kazuhiko  <kazuhiko@fdiary.net>
	* Hiki 0.8.2 released!

2005-07-21  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/hiki-mode/hiki-mode.el (hiki-fetch-index): fixed: FrontPage
	is not listed in hiki-index.

	* misc/hiki-mode/hiki-mode.el (hiki-edit-save-page): fixed: Can't
	save keywords when initial keyword is empty. (by Takeshi UME Imai)

	* misc/hiki-mode/hiki-mode.el (hiki-display-page): fixed: Can't
	input keywords if keywords area is erased once.

2005-07-20  Kazuhiko  <kazuhiko@fdiary.net>
	* misc/plugin/attach/attach.cgi: only output basename of attached
	/ detached files in diff mails.

	* style/default/html_formatter.rb (make_link): use a page name
	instead of a page title in a 'title' attribute (closes #14).

	* misc/plugin/bbs.rb: support changing heading levels (by
	U.Nakamura).

	* hiki/pluginutil.rb (argwords): escape double quotes (reported by
	Kazuhiro NISHIYAMA).

2005-07-19  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki-mode.el: revise for 0.8.1 (by Takeshi UME Imai).

2005-07-17  Kazuhiko  <kazuhiko@fdiary.net>