@@ -1,3 +1,6 @@
+2005-07-31  Kouhei Yanagita <sugi@dream.big.or.jp>
+	* hiki/xmlrpc.rb (init_handler): implement wiki.getAllPages.
+
 2005-07-29  Kouhei Yanagita <sugi@dream.big.or.jp>
 	* hiki.cgi, hikiconf.rb.sample, hiki/config.rb, hiki/xmlrpc.rb,
 	misc/hikifarm/hiki.conf, misc/i18n/hikiconf.rb.sample.en,
